// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewRating render correctly Disable ReviewRating 1`] = `
Array [
  <input
    className="form__rating-input visually-hidden"
    disabled="disabled"
    id="5-stars"
    name="rating"
    required={true}
    type="radio"
    value="5"
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;

exports[`ReviewRating render correctly Enable ReviewRating 1`] = `
Array [
  <input
    className="form__rating-input visually-hidden"
    disabled=""
    id="5-stars"
    name="rating"
    required={true}
    type="radio"
    value="5"
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;

exports[`ReviewRating render correctly Not disable ReviewRating 1`] = `
Array [
  <input
    className="form__rating-input visually-hidden"
    disabled=""
    id="5-stars"
    name="rating"
    required={true}
    type="radio"
    value="5"
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;
